docs/upbound-provider-gcp/1.8/pubsub/v1beta1/topic.md
---
permalink: /upbound-provider-gcp/1.8/pubsub/v1beta1/topic/
---

# pubsub.v1beta1.topic

"Topic is the Schema for the Topics API. A named resource to which messages are sent by publishers."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withIngestionDataSourceSettings(ingestionDataSourceSettings)`](#fn-specforproviderwithingestiondatasourcesettings)
    * [`fn withIngestionDataSourceSettingsMixin(ingestionDataSourceSettings)`](#fn-specforproviderwithingestiondatasourcesettingsmixin)
    * [`fn withKmsKeyName(kmsKeyName)`](#fn-specforproviderwithkmskeyname)
    * [`fn withLabels(labels)`](#fn-specforproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specforproviderwithlabelsmixin)
    * [`fn withMessageRetentionDuration(messageRetentionDuration)`](#fn-specforproviderwithmessageretentionduration)
    * [`fn withMessageStoragePolicy(messageStoragePolicy)`](#fn-specforproviderwithmessagestoragepolicy)
    * [`fn withMessageStoragePolicyMixin(messageStoragePolicy)`](#fn-specforproviderwithmessagestoragepolicymixin)
    * [`fn withProject(project)`](#fn-specforproviderwithproject)
    * [`fn withSchemaSettings(schemaSettings)`](#fn-specforproviderwithschemasettings)
    * [`fn withSchemaSettingsMixin(schemaSettings)`](#fn-specforproviderwithschemasettingsmixin)
    * [`obj spec.forProvider.ingestionDataSourceSettings`](#obj-specforprovideringestiondatasourcesettings)
      * [`fn withAwsKinesis(awsKinesis)`](#fn-specforprovideringestiondatasourcesettingswithawskinesis)
      * [`fn withAwsKinesisMixin(awsKinesis)`](#fn-specforprovideringestiondatasourcesettingswithawskinesismixin)
      * [`obj spec.forProvider.ingestionDataSourceSettings.awsKinesis`](#obj-specforprovideringestiondatasourcesettingsawskinesis)
        * [`fn withAwsRoleArn(awsRoleArn)`](#fn-specforprovideringestiondatasourcesettingsawskinesiswithawsrolearn)
        * [`fn withConsumerArn(consumerArn)`](#fn-specforprovideringestiondatasourcesettingsawskinesiswithconsumerarn)
        * [`fn withGcpServiceAccount(gcpServiceAccount)`](#fn-specforprovideringestiondatasourcesettingsawskinesiswithgcpserviceaccount)
        * [`fn withStreamArn(streamArn)`](#fn-specforprovideringestiondatasourcesettingsawskinesiswithstreamarn)
    * [`obj spec.forProvider.kmsKeyNameRef`](#obj-specforproviderkmskeynameref)
      * [`fn withName(name)`](#fn-specforproviderkmskeynamerefwithname)
      * [`obj spec.forProvider.kmsKeyNameRef.policy`](#obj-specforproviderkmskeynamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderkmskeynamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderkmskeynamerefpolicywithresolve)
    * [`obj spec.forProvider.kmsKeyNameSelector`](#obj-specforproviderkmskeynameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderkmskeynameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderkmskeynameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderkmskeynameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.kmsKeyNameSelector.policy`](#obj-specforproviderkmskeynameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderkmskeynameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderkmskeynameselectorpolicywithresolve)
    * [`obj spec.forProvider.messageStoragePolicy`](#obj-specforprovidermessagestoragepolicy)
      * [`fn withAllowedPersistenceRegions(allowedPersistenceRegions)`](#fn-specforprovidermessagestoragepolicywithallowedpersistenceregions)
      * [`fn withAllowedPersistenceRegionsMixin(allowedPersistenceRegions)`](#fn-specforprovidermessagestoragepolicywithallowedpersistenceregionsmixin)
    * [`obj spec.forProvider.schemaSettings`](#obj-specforproviderschemasettings)
      * [`fn withEncoding(encoding)`](#fn-specforproviderschemasettingswithencoding)
      * [`fn withSchema(schema)`](#fn-specforproviderschemasettingswithschema)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withIngestionDataSourceSettings(ingestionDataSourceSettings)`](#fn-specinitproviderwithingestiondatasourcesettings)
    * [`fn withIngestionDataSourceSettingsMixin(ingestionDataSourceSettings)`](#fn-specinitproviderwithingestiondatasourcesettingsmixin)
    * [`fn withKmsKeyName(kmsKeyName)`](#fn-specinitproviderwithkmskeyname)
    * [`fn withLabels(labels)`](#fn-specinitproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specinitproviderwithlabelsmixin)
    * [`fn withMessageRetentionDuration(messageRetentionDuration)`](#fn-specinitproviderwithmessageretentionduration)
    * [`fn withMessageStoragePolicy(messageStoragePolicy)`](#fn-specinitproviderwithmessagestoragepolicy)
    * [`fn withMessageStoragePolicyMixin(messageStoragePolicy)`](#fn-specinitproviderwithmessagestoragepolicymixin)
    * [`fn withProject(project)`](#fn-specinitproviderwithproject)
    * [`fn withSchemaSettings(schemaSettings)`](#fn-specinitproviderwithschemasettings)
    * [`fn withSchemaSettingsMixin(schemaSettings)`](#fn-specinitproviderwithschemasettingsmixin)
    * [`obj spec.initProvider.ingestionDataSourceSettings`](#obj-specinitprovideringestiondatasourcesettings)
      * [`fn withAwsKinesis(awsKinesis)`](#fn-specinitprovideringestiondatasourcesettingswithawskinesis)
      * [`fn withAwsKinesisMixin(awsKinesis)`](#fn-specinitprovideringestiondatasourcesettingswithawskinesismixin)
      * [`obj spec.initProvider.ingestionDataSourceSettings.awsKinesis`](#obj-specinitprovideringestiondatasourcesettingsawskinesis)
        * [`fn withAwsRoleArn(awsRoleArn)`](#fn-specinitprovideringestiondatasourcesettingsawskinesiswithawsrolearn)
        * [`fn withConsumerArn(consumerArn)`](#fn-specinitprovideringestiondatasourcesettingsawskinesiswithconsumerarn)
        * [`fn withGcpServiceAccount(gcpServiceAccount)`](#fn-specinitprovideringestiondatasourcesettingsawskinesiswithgcpserviceaccount)
        * [`fn withStreamArn(streamArn)`](#fn-specinitprovideringestiondatasourcesettingsawskinesiswithstreamarn)
    * [`obj spec.initProvider.kmsKeyNameRef`](#obj-specinitproviderkmskeynameref)
      * [`fn withName(name)`](#fn-specinitproviderkmskeynamerefwithname)
      * [`obj spec.initProvider.kmsKeyNameRef.policy`](#obj-specinitproviderkmskeynamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderkmskeynamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderkmskeynamerefpolicywithresolve)
    * [`obj spec.initProvider.kmsKeyNameSelector`](#obj-specinitproviderkmskeynameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderkmskeynameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderkmskeynameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderkmskeynameselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.kmsKeyNameSelector.policy`](#obj-specinitproviderkmskeynameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderkmskeynameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderkmskeynameselectorpolicywithresolve)
    * [`obj spec.initProvider.messageStoragePolicy`](#obj-specinitprovidermessagestoragepolicy)
      * [`fn withAllowedPersistenceRegions(allowedPersistenceRegions)`](#fn-specinitprovidermessagestoragepolicywithallowedpersistenceregions)
      * [`fn withAllowedPersistenceRegionsMixin(allowedPersistenceRegions)`](#fn-specinitprovidermessagestoragepolicywithallowedpersistenceregionsmixin)
    * [`obj spec.initProvider.schemaSettings`](#obj-specinitproviderschemasettings)
      * [`fn withEncoding(encoding)`](#fn-specinitproviderschemasettingswithencoding)
      * [`fn withSchema(schema)`](#fn-specinitproviderschemasettingswithschema)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Topic

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"TopicSpec defines the desired state of Topic"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withIngestionDataSourceSettings

```ts
withIngestionDataSourceSettings(ingestionDataSourceSettings)
```

"Settings for ingestion from a data source into this topic.\nStructure is documented below."

### fn spec.forProvider.withIngestionDataSourceSettingsMixin

```ts
withIngestionDataSourceSettingsMixin(ingestionDataSourceSettings)
```

"Settings for ingestion from a data source into this topic.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withKmsKeyName

```ts
withKmsKeyName(kmsKeyName)
```

"The resource name of the Cloud KMS CryptoKey to be used to protect access\nto messages published on this topic. Your project's PubSub service account\n(service-{{PROJECT_NUMBER}}@gcp-sa-pubsub.iam.gserviceaccount.com) must have\nroles/cloudkms.cryptoKeyEncrypterDecrypter to use this feature.\nThe expected format is projects/*/locations/*/keyRings/*/cryptoKeys/*"

### fn spec.forProvider.withLabels

```ts
withLabels(labels)
```

"A set of key/value label pairs to assign to this Topic."

### fn spec.forProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"A set of key/value label pairs to assign to this Topic."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withMessageRetentionDuration

```ts
withMessageRetentionDuration(messageRetentionDuration)
```

"Indicates the minimum duration to retain a message after it is published\nto the topic. If this field is set, messages published to the topic in\nthe last messageRetentionDuration are always available to subscribers.\nFor instance, it allows any attached subscription to seek to a timestamp\nthat is up to messageRetentionDuration in the past. If this field is not\nset, message retention is controlled by settings on individual subscriptions.\nThe rotation period has the format of a decimal number, followed by the\nletter s (seconds). Cannot be more than 31 days or less than 10 minutes."

### fn spec.forProvider.withMessageStoragePolicy

```ts
withMessageStoragePolicy(messageStoragePolicy)
```

"Policy constraining the set of Google Cloud Platform regions where\nmessages published to the topic may be stored. If not present, then no\nconstraints are in effect.\nStructure is documented below."

### fn spec.forProvider.withMessageStoragePolicyMixin

```ts
withMessageStoragePolicyMixin(messageStoragePolicy)
```

"Policy constraining the set of Google Cloud Platform regions where\nmessages published to the topic may be stored. If not present, then no\nconstraints are in effect.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.forProvider.withSchemaSettings

```ts
withSchemaSettings(schemaSettings)
```

"Settings for validating messages published against a schema.\nStructure is documented below."

### fn spec.forProvider.withSchemaSettingsMixin

```ts
withSchemaSettingsMixin(schemaSettings)
```

"Settings for validating messages published against a schema.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.ingestionDataSourceSettings

"Settings for ingestion from a data source into this topic.\nStructure is documented below."

### fn spec.forProvider.ingestionDataSourceSettings.withAwsKinesis

```ts
withAwsKinesis(awsKinesis)
```

"Settings for ingestion from Amazon Kinesis Data Streams.\nStructure is documented below."

### fn spec.forProvider.ingestionDataSourceSettings.withAwsKinesisMixin

```ts
withAwsKinesisMixin(awsKinesis)
```

"Settings for ingestion from Amazon Kinesis Data Streams.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.ingestionDataSourceSettings.awsKinesis

"Settings for ingestion from Amazon Kinesis Data Streams.\nStructure is documented below."

### fn spec.forProvider.ingestionDataSourceSettings.awsKinesis.withAwsRoleArn

```ts
withAwsRoleArn(awsRoleArn)
```

"AWS role ARN to be used for Federated Identity authentication with\nKinesis. Check the Pub/Sub docs for how to set up this role and the\nrequired permissions that need to be attached to it."

### fn spec.forProvider.ingestionDataSourceSettings.awsKinesis.withConsumerArn

```ts
withConsumerArn(consumerArn)
```

"The Kinesis consumer ARN to used for ingestion in\nEnhanced Fan-Out mode. The consumer must be already\ncreated and ready to be used."

### fn spec.forProvider.ingestionDataSourceSettings.awsKinesis.withGcpServiceAccount

```ts
withGcpServiceAccount(gcpServiceAccount)
```

"The GCP service account to be used for Federated Identity authentication\nwith Kinesis (via a AssumeRoleWithWebIdentity call for the provided\nrole). The awsRoleArn must be set up with accounts.google.com:sub\nequals to this service account number."

### fn spec.forProvider.ingestionDataSourceSettings.awsKinesis.withStreamArn

```ts
withStreamArn(streamArn)
```

"The Kinesis stream ARN to ingest data from."

## obj spec.forProvider.kmsKeyNameRef

"Reference to a CryptoKey in kms to populate kmsKeyName."

### fn spec.forProvider.kmsKeyNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.kmsKeyNameRef.policy

"Policies for referencing."

### fn spec.forProvider.kmsKeyNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.kmsKeyNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.kmsKeyNameSelector

"Selector for a CryptoKey in kms to populate kmsKeyName."

### fn spec.forProvider.kmsKeyNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.kmsKeyNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.kmsKeyNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.kmsKeyNameSelector.policy

"Policies for selection."

### fn spec.forProvider.kmsKeyNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.kmsKeyNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.messageStoragePolicy

"Policy constraining the set of Google Cloud Platform regions where\nmessages published to the topic may be stored. If not present, then no\nconstraints are in effect.\nStructure is documented below."

### fn spec.forProvider.messageStoragePolicy.withAllowedPersistenceRegions

```ts
withAllowedPersistenceRegions(allowedPersistenceRegions)
```

"A list of IDs of GCP regions where messages that are published to\nthe topic may be persisted in storage. Messages published by\npublishers running in non-allowed GCP regions (or running outside\nof GCP altogether) will be routed for storage in one of the\nallowed regions. An empty list means that no regions are allowed,\nand is not a valid configuration."

### fn spec.forProvider.messageStoragePolicy.withAllowedPersistenceRegionsMixin

```ts
withAllowedPersistenceRegionsMixin(allowedPersistenceRegions)
```

"A list of IDs of GCP regions where messages that are published to\nthe topic may be persisted in storage. Messages published by\npublishers running in non-allowed GCP regions (or running outside\nof GCP altogether) will be routed for storage in one of the\nallowed regions. An empty list means that no regions are allowed,\nand is not a valid configuration."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.schemaSettings

"Settings for validating messages published against a schema.\nStructure is documented below."

### fn spec.forProvider.schemaSettings.withEncoding

```ts
withEncoding(encoding)
```

"The encoding of messages validated against schema.\nDefault value is ENCODING_UNSPECIFIED.\nPossible values are: ENCODING_UNSPECIFIED, JSON, BINARY."

### fn spec.forProvider.schemaSettings.withSchema

```ts
withSchema(schema)
```

"The name of the schema that messages published should be\nvalidated against. Format is projects/{project}/schemas/{schema}.\nThe value of this field will be deleted-schema\nif the schema has been deleted."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withIngestionDataSourceSettings

```ts
withIngestionDataSourceSettings(ingestionDataSourceSettings)
```

"Settings for ingestion from a data source into this topic.\nStructure is documented below."

### fn spec.initProvider.withIngestionDataSourceSettingsMixin

```ts
withIngestionDataSourceSettingsMixin(ingestionDataSourceSettings)
```

"Settings for ingestion from a data source into this topic.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withKmsKeyName

```ts
withKmsKeyName(kmsKeyName)
```

"The resource name of the Cloud KMS CryptoKey to be used to protect access\nto messages published on this topic. Your project's PubSub service account\n(service-{{PROJECT_NUMBER}}@gcp-sa-pubsub.iam.gserviceaccount.com) must have\nroles/cloudkms.cryptoKeyEncrypterDecrypter to use this feature.\nThe expected format is projects/*/locations/*/keyRings/*/cryptoKeys/*"

### fn spec.initProvider.withLabels

```ts
withLabels(labels)
```

"A set of key/value label pairs to assign to this Topic."

### fn spec.initProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"A set of key/value label pairs to assign to this Topic."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withMessageRetentionDuration

```ts
withMessageRetentionDuration(messageRetentionDuration)
```

"Indicates the minimum duration to retain a message after it is published\nto the topic. If this field is set, messages published to the topic in\nthe last messageRetentionDuration are always available to subscribers.\nFor instance, it allows any attached subscription to seek to a timestamp\nthat is up to messageRetentionDuration in the past. If this field is not\nset, message retention is controlled by settings on individual subscriptions.\nThe rotation period has the format of a decimal number, followed by the\nletter s (seconds). Cannot be more than 31 days or less than 10 minutes."

### fn spec.initProvider.withMessageStoragePolicy

```ts
withMessageStoragePolicy(messageStoragePolicy)
```

"Policy constraining the set of Google Cloud Platform regions where\nmessages published to the topic may be stored. If not present, then no\nconstraints are in effect.\nStructure is documented below."

### fn spec.initProvider.withMessageStoragePolicyMixin

```ts
withMessageStoragePolicyMixin(messageStoragePolicy)
```

"Policy constraining the set of Google Cloud Platform regions where\nmessages published to the topic may be stored. If not present, then no\nconstraints are in effect.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.initProvider.withSchemaSettings

```ts
withSchemaSettings(schemaSettings)
```

"Settings for validating messages published against a schema.\nStructure is documented below."

### fn spec.initProvider.withSchemaSettingsMixin

```ts
withSchemaSettingsMixin(schemaSettings)
```

"Settings for validating messages published against a schema.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.ingestionDataSourceSettings

"Settings for ingestion from a data source into this topic.\nStructure is documented below."

### fn spec.initProvider.ingestionDataSourceSettings.withAwsKinesis

```ts
withAwsKinesis(awsKinesis)
```

"Settings for ingestion from Amazon Kinesis Data Streams.\nStructure is documented below."

### fn spec.initProvider.ingestionDataSourceSettings.withAwsKinesisMixin

```ts
withAwsKinesisMixin(awsKinesis)
```

"Settings for ingestion from Amazon Kinesis Data Streams.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.ingestionDataSourceSettings.awsKinesis

"Settings for ingestion from Amazon Kinesis Data Streams.\nStructure is documented below."

### fn spec.initProvider.ingestionDataSourceSettings.awsKinesis.withAwsRoleArn

```ts
withAwsRoleArn(awsRoleArn)
```

"AWS role ARN to be used for Federated Identity authentication with\nKinesis. Check the Pub/Sub docs for how to set up this role and the\nrequired permissions that need to be attached to it."

### fn spec.initProvider.ingestionDataSourceSettings.awsKinesis.withConsumerArn

```ts
withConsumerArn(consumerArn)
```

"The Kinesis consumer ARN to used for ingestion in\nEnhanced Fan-Out mode. The consumer must be already\ncreated and ready to be used."

### fn spec.initProvider.ingestionDataSourceSettings.awsKinesis.withGcpServiceAccount

```ts
withGcpServiceAccount(gcpServiceAccount)
```

"The GCP service account to be used for Federated Identity authentication\nwith Kinesis (via a AssumeRoleWithWebIdentity call for the provided\nrole). The awsRoleArn must be set up with accounts.google.com:sub\nequals to this service account number."

### fn spec.initProvider.ingestionDataSourceSettings.awsKinesis.withStreamArn

```ts
withStreamArn(streamArn)
```

"The Kinesis stream ARN to ingest data from."

## obj spec.initProvider.kmsKeyNameRef

"Reference to a CryptoKey in kms to populate kmsKeyName."

### fn spec.initProvider.kmsKeyNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.kmsKeyNameRef.policy

"Policies for referencing."

### fn spec.initProvider.kmsKeyNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.kmsKeyNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.kmsKeyNameSelector

"Selector for a CryptoKey in kms to populate kmsKeyName."

### fn spec.initProvider.kmsKeyNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.kmsKeyNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.kmsKeyNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.kmsKeyNameSelector.policy

"Policies for selection."

### fn spec.initProvider.kmsKeyNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.kmsKeyNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.messageStoragePolicy

"Policy constraining the set of Google Cloud Platform regions where\nmessages published to the topic may be stored. If not present, then no\nconstraints are in effect.\nStructure is documented below."

### fn spec.initProvider.messageStoragePolicy.withAllowedPersistenceRegions

```ts
withAllowedPersistenceRegions(allowedPersistenceRegions)
```

"A list of IDs of GCP regions where messages that are published to\nthe topic may be persisted in storage. Messages published by\npublishers running in non-allowed GCP regions (or running outside\nof GCP altogether) will be routed for storage in one of the\nallowed regions. An empty list means that no regions are allowed,\nand is not a valid configuration."

### fn spec.initProvider.messageStoragePolicy.withAllowedPersistenceRegionsMixin

```ts
withAllowedPersistenceRegionsMixin(allowedPersistenceRegions)
```

"A list of IDs of GCP regions where messages that are published to\nthe topic may be persisted in storage. Messages published by\npublishers running in non-allowed GCP regions (or running outside\nof GCP altogether) will be routed for storage in one of the\nallowed regions. An empty list means that no regions are allowed,\nand is not a valid configuration."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.schemaSettings

"Settings for validating messages published against a schema.\nStructure is documented below."

### fn spec.initProvider.schemaSettings.withEncoding

```ts
withEncoding(encoding)
```

"The encoding of messages validated against schema.\nDefault value is ENCODING_UNSPECIFIED.\nPossible values are: ENCODING_UNSPECIFIED, JSON, BINARY."

### fn spec.initProvider.schemaSettings.withSchema

```ts
withSchema(schema)
```

"The name of the schema that messages published should be\nvalidated against. Format is projects/{project}/schemas/{schema}.\nThe value of this field will be deleted-schema\nif the schema has been deleted."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."